# BaklavaDescent

./: .gitignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  CMakeLists.txt  DONE.md  RNG_HUNT.md  SKIP_ME_FOR_NOW.md  dump_obj_state  test_session.rec  worklog.md
3d/: clipper.cpp  draw.cpp  instance.cpp  interp.cpp  matrix.cpp  points.cpp  rod.cpp
bridge_specs/: ai_frame_d1.table  ai_frame_d2.table
callgraph/: main_d2_ai.callgraph.dot  main_d2_ai.ll  main_d2_ai2.callgraph.dot  main_d2_ai2.ll  main_d2_aipath.callgraph.dot  main_d2_aipath.ll  main_d2_cntrlcen.callgraph.dot  main_d2_cntrlcen.ll  main_d2_collide.callgraph.dot  main_d2_collide.ll  main_d2_escort.callgraph.dot  main_d2_escort.ll  main_d2_fireball.callgraph.dot  main_d2_fireball.ll  main_d2_fuelcen.callgraph.dot  main_d2_fuelcen.ll  main_d2_fvi.callgraph.dot  main_d2_fvi.ll  main_d2_gameseg.callgraph.dot  main_d2_gameseg.ll  main_d2_gameseq.callgraph.dot  main_d2_gameseq.ll  main_d2_laser.callgraph.dot  main_d2_laser.ll  main_d2_lighting.callgraph.dot  main_d2_lighting.ll  main_d2_morph.callgraph.dot  main_d2_morph.ll  main_d2_multi.callgraph.dot  main_d2_multi.ll  main_d2_multibot.callgraph.dot  main_d2_multibot.ll  main_d2_object.callgraph.dot  main_d2_object.ll  main_d2_physics.callgraph.dot  main_d2_physics.ll  main_d2_powerup.callgraph.dot  main_d2_powerup.ll  main_d2_robot.callgraph.dot  main_d2_robot.ll  (+8 more)
fix/: fix.cpp
main_d1/: ai.cpp  aipath.cpp  cntrlcen.cpp  collide.cpp  endlevel.cpp  fireball.cpp  fuelcen.cpp  fvi.cpp  gameseg.cpp  gameseq.cpp  laser.cpp  lighting.cpp  morph.cpp  object.cpp  physics.cpp  robot.cpp  switch.cpp  wall.cpp  wall.h  weapon.cpp
main_d2/: ai.cpp  ai2.cpp  aipath.cpp  cntrlcen.cpp  collide.cpp  endlevel.cpp  escort.cpp  fireball.cpp  fuelcen.cpp  fvi.cpp  game.cpp  gameseg.cpp  gameseq.cpp  inferno.cpp  laser.cpp  lighting.cpp  morph.cpp  multi.cpp  object.cpp  physics.cpp  robot.cpp  switch.cpp  wall.cpp  wall.h  weapon.cpp
misc/: rand.cpp  rand.h
ox/: .gitignore  ai_bridge.ml  ai_frame_bridge.ml  bridge.c  bridge.h  collide_bridge.ml  controlcen_bridge.ml  dune  dune-project  fvi_bridge.ml  g3d_bridge.ml  gameseg_bridge.ml  input_recorder.cpp  input_replayer.cpp  input_replayer.h  lighting_bridge.ml  math_bridge.ml  ox_3d.ml  ox_ai.ml  ox_ai_frame.ml  ox_aipath.ml  ox_collide.ml  ox_controlcen.ml  ox_curves.ml  ox_escort.ml  ox_fireball.ml  ox_fuelcen.ml  ox_fvi.ml  ox_gameseg.ml  ox_gameseq.ml  ox_gen_ai_frame_d1.ml  ox_gen_ai_frame_d2.ml  ox_laser.ml  ox_lighting.ml  ox_math.ml  ox_mem.ml  ox_misc.ml  ox_morph.ml  ox_obj.ml  ox_physics.ml  (+11 more)
ox-bridge/: ai.ml  ai_frame.ml  bridge.c  bridge.h  bridge.ml  collide.ml  controlcen.ml  dune  escort.ml  fireball.ml  fuelcen.ml  fvi.ml  g3d.ml  gameseg.ml  gameseq.ml  gen_ai_frame_d1.h  gen_ai_frame_d2.h  laser.ml  lighting.ml  math.ml  mem.ml  misc.ml  morph.ml  obj_mgmt.ml  physics.ml  physics_sim.ml  robot.ml  switch.ml  wall.ml  weapon.ml
ox/oracle/: CMakeLists.txt  c_oracle.cpp  c_oracle.h  c_oracle_collide.cpp  c_oracle_fvi.cpp  c_oracle_gameseg.h
ox/tests/: c_fix_stubs.cpp  collide_expect.ml  dune  parity_expect.ml
ox/tests/oracle/: CMakeLists.txt  c_oracle.h  c_oracle_collide.h  c_oracle_curves.cpp  c_oracle_curves.h  c_oracle_fvi.h  c_oracle_gameseg.cpp
platform/unix/: unixmain.cpp
ralph_logs/: claude_001.jsonl  claude_002.jsonl  claude_003.jsonl  claude_004.jsonl  claude_005.jsonl  claude_006.jsonl  claude_007.jsonl  claude_008.jsonl  claude_009.jsonl  claude_010.jsonl  claude_014.jsonl  claude_015.jsonl  claude_016.jsonl  claude_017.jsonl  claude_018.jsonl  claude_019.jsonl  claude_020.jsonl  claude_021.jsonl  claude_022.jsonl  claude_023.jsonl  claude_024.jsonl  claude_025.jsonl  claude_026.jsonl  claude_027.jsonl  claude_028.jsonl  claude_029.jsonl  claude_030.jsonl  claude_031.jsonl  claude_032.jsonl  claude_033.jsonl  claude_034.jsonl  claude_044.jsonl  claude_045.jsonl  claude_046.jsonl  claude_047.jsonl  claude_048.jsonl  claude_049.jsonl  claude_050.jsonl  claude_051.jsonl  claude_052.jsonl  (+74 more)
scripts/: gen_bridge.py  gen_callgraph.py  ralph_loop.sh  ralph_watch.sh
scripts/ox/: README.md  build_bridge.sh  build_c_oracle.sh  run_expect_tests.sh  run_smoke.sh
tools/: compare_state_logs.c  dump_obj_state.c  headless_replay.cpp  headless_stubs.cpp  input_recorder.cpp  input_recorder.h  input_replayer.cpp  input_replayer.h  parity.cpp  parity.h  smoke_test.cpp
vecmat/: vecmat.cpp
