(executable
 (name bridge)
 (modes (native object))
 (libraries core ox)
 (modules
   bridge
   math
   g3d gameseg
   physics collide
   fvi ai
   robot lighting
   weapon controlcen
   ai_frame physics_sim
   misc mem escort gameseq switch wall obj_mgmt morph)
 (flags (:standard -w -27 -open Core)))
