(library
 (name ox_math)
 (libraries core)
 (modules ox_math)
 (flags
  (:standard -open Core)))

(library
 (name ox_3d)
 (libraries core ox_math)
 (modules ox_3d)
 (flags
  (:standard -open Core)))

(library
 (name ox_gameseg)
 (libraries core ox_math)
 (modules ox_gameseg)
 (flags
  (:standard -open Core)))

(library
 (name ox_fvi)
 (libraries core ox_math ox_gameseg ox_collide)
 (modules ox_fvi)
 (flags
  (:standard -open Core)))

(library
 (name ox_curves)
 (libraries core ox_math)
 (modules ox_curves)
 (flags
  (:standard -open Core)))

(library
 (name bridge_3d)
 (libraries core ox_math ox_3d)
 (modules g3d_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name bridge_gameseg)
 (libraries core ox_math ox_gameseg)
 (modules gameseg_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name bridge_fvi)
 (libraries core ox_math ox_gameseg ox_fvi)
 (modules fvi_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name ox_collide)
 (libraries core ox_math ox_physics)
 (modules ox_collide)
 (flags
  (:standard -open Core)))

(library
 (name bridge_collide)
 (libraries core ox_collide)
 (modules collide_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name ox_physics)
 (libraries core ox_math)
 (modules ox_physics)
 (flags
  (:standard -open Core)))

(library
 (name bridge_physics)
 (libraries core ox_physics)
 (modules physics_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name ox_ai)
 (libraries core ox_math)
 (modules ox_ai)
 (flags
  (:standard -open Core)))

(library
 (name bridge_ai)
 (libraries core ox_ai)
 (modules ai_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name ox_robot)
 (libraries core)
 (modules ox_robot)
 (flags
  (:standard -open Core)))

(library
 (name bridge_robot)
 (libraries core ox_robot)
 (modules robot_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name ox_lighting)
 (libraries core ox_math)
 (modules ox_lighting)
 (flags
  (:standard -open Core)))

(library
 (name bridge_lighting)
 (libraries core ox_math ox_lighting)
 (modules lighting_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name ox_weapon)
 (libraries core)
 (modules ox_weapon)
 (flags
  (:standard -open Core)))

(library
 (name bridge_weapon)
 (libraries core ox_weapon)
 (modules weapon_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name ox_controlcen)
 (libraries core ox_math ox_collide)
 (modules ox_controlcen)
 (flags
  (:standard -open Core)))

(library
 (name bridge_controlcen)
 (libraries core ox_controlcen)
 (modules controlcen_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name ox_ai_frame)
 (libraries core ox_math ox_physics ox_ai ox_collide)
 (modules ox_ai_frame)
 (flags
  (:standard -open Core)))

(library
 (name bridge_ai_frame)
 (libraries core ox_ai_frame)
 (modules ai_frame_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(library
 (name ox_physics_sim)
 (libraries core ox_math ox_physics)
 (modules ox_physics_sim)
 (flags
  (:standard -open Core)))

(library
 (name bridge_physics_sim)
 (libraries core ox_physics_sim)
 (modules physics_sim_bridge)
 (wrapped false)
 (flags
  (:standard -open Core)))

(executable
 (name math_bridge)
 (modes native)
 (modules math_bridge)
 (libraries
  core
  ox_math
  ox_3d
  bridge_3d
  ox_gameseg
  bridge_gameseg
  ox_fvi
  bridge_fvi
  ox_collide
  bridge_collide
  ox_physics
  bridge_physics
  ox_ai
  bridge_ai
  ox_robot
  bridge_robot
  ox_lighting
  bridge_lighting
  ox_weapon
  bridge_weapon
  ox_controlcen
  bridge_controlcen
  ox_ai_frame
  bridge_ai_frame
  ox_physics_sim
  bridge_physics_sim)
 (flags
  (:standard -open Core)))
