(library
 (name ox)
 (wrapped false)
 (libraries core)
 (modules
   ox_math ox_3d
   ox_gameseg ox_curves
   ox_physics ox_collide
   ox_fvi ox_ai ox_aipath
   ox_robot ox_lighting ox_weapon
   ox_controlcen ox_ai_frame ox_physics_sim
   ox_misc ox_mem ox_escort ox_gameseq ox_switch ox_wall ox_obj ox_morph)
 (flags (:standard -w -27 -open Core)))
